@@ -499,6 +499,9 @@ static void _sort_hostlist(List sinfo_list)
 
 static bool _match_node_data(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr)
 {
+	if (params.match_flags.hostnames_flag)
+		return false;
+
 	if (sinfo_ptr->nodes &&
 	    params.match_flags.features_flag &&
 	    (_strcmp(node_ptr->features, sinfo_ptr->features)))
@@ -701,6 +704,7 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 	}
 
 	hostlist_push(sinfo_ptr->nodes, node_ptr->name);
+	hostlist_push(sinfo_ptr->hostnames, node_ptr->node_hostname);
 
 	total_cpus = node_ptr->cpus;
 	total_nodes = node_scaling;
@@ -907,6 +911,7 @@ static sinfo_data_t *_create_sinfo(partition_info_t* part_ptr,
 	sinfo_ptr->part_info = part_ptr;
 	sinfo_ptr->part_inx = part_inx;
 	sinfo_ptr->nodes = hostlist_create("");
+	sinfo_ptr->hostnames = hostlist_create("");
 
 	if (node_ptr)
 		_update_sinfo(sinfo_ptr, node_ptr, node_scaling);
@@ -919,6 +924,7 @@ static void _sinfo_list_delete(void *data)
 	sinfo_data_t *sinfo_ptr = data;
 
 	hostlist_destroy(sinfo_ptr->nodes);
+	hostlist_destroy(sinfo_ptr->hostnames);
 	xfree(sinfo_ptr);
 }
 
